Icon-O-Matic: restors default position when it starts out of screen

fixes #18865

Change-Id: If8c286c730b5660be6c20e159a9de6637af25f47