src/apps/icon-o-matic/IconEditorApp.cpp
@@ -23,6 +23,7 @@
 #include <Message.h>
 #include <Mime.h>
 #include <Path.h>
+#include <Screen.h>
 
 #include "support_settings.h"
 
@@ -291,6 +292,13 @@ IconEditorApp::_NewWindow()
 	MainWindow* window = new MainWindow(fLastWindowFrame, this,
 		&fLastWindowSettings);
 	fWindowCount++;
+	BScreen* screen = new BScreen(window);
+
+	BRect screenFrame =  screen->Frame();
+
+	if (!screenFrame.Intersects(fLastWindowFrame))
+		window->MoveOnScreen();
+
 	return window;
 }
 
